# Gym-Trading-Env

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  example.py  pyproject.toml
data/: BTC_USD-Hourly.csv
docs/: requirements.in  requirements.txt
docs/source/: advanced.rst  advanced_usage.rst  backtest.rst  basic_usage.rst  conf.py  customization.rst  documentation.rst  download.rst  environment_desc.rst  environments.rst  explanation.rst  features.rst  getting_started.rst  history.rst  index.rst  multi_dataset.rst  multi_datasets.rst  properties.rst  render.rst  rl_tutorial.rst  style.css  usage.rst  vectorize_env.rst
environments/: renderer.py  trading_env.py
examples/: example_download.py  example_environnement.py  example_multi_environnement.py  example_render.py  example_vectorized_environment.py  example_vectorized_multi_environment.py
src/environments/: renderer.py  trading_env.py
src/gym-trading-env/: __init__.py
src/gym_trading_env/: __init__.py  downloader.py  environments.py  renderer.py
src/gym_trading_env/templates/: index.html
src/gym_trading_env/utils/: charts.py  history.py  portfolio.py
test/: example.py  example_download.py  example_environnement.py  example_multi_environnement.py  example_render.py  example_vectorized_environment.py  example_vectorized_multi_environment.py  test.ipynb
test/data/: BTC_USD-Hourly.csv
